--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^0.3.6",
     "medium-editor": "^5.23.0",
     "medium-sdk": "0.0.4",
+    "rxjs": "^5.3.0",
     "spellchecker": "^3.3.1",
     "to-markdown": "^3.0.4"
   }
